Refactored PersonService to use PersonModelDtoMapper for streamlined DTO-model mapping and switched inheritance strategy to JOINED.